WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294423
Fix Cocoa builds after
296172@main
https://bugs.webkit.org/show_bug.cgi?id=294423
Summary
Fix Cocoa builds after 296172@main
Aditya Keerthi
Reported
2025-06-12 18:52:54 PDT
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2025-06-12 18:56:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/46689
EWS
Comment 2
2025-06-12 19:01:28 PDT
Committed
296178@main
(fee1365e3a6f): <
https://commits.webkit.org/296178@main
> Reviewed commits have been landed. Closing PR #46689 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-06-12 19:02:59 PDT
<
rdar://problem/153252427
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug