Fix Cocoa builds after 296172@main https://bugs.webkit.org/show_bug.cgi?id=294423

Unreviewed build fix.

* Source/WebCore/rendering/cocoa/RenderThemeCocoa.mm:
(WebCore::adjustInputElementButtonStyleForVectorBasedControls):

Canonical link: https://commits.webkit.org/296178@main